update to gulp file

--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,8 @@ body {
     text-align: left; }
 
 .small-title {
-  background: #ecf0f1;
-  color: #2c3e50;
-  font-weight: 700;
+  background: #7f8c8d;
+  color: white;
   font-size: 0.9em;
   padding: 3px 15px; }
 
