--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,9 +37,8 @@ body {
 	}		
 }
 .small-title {
-	background: #ecf0f1;
-	color: #2c3e50;
-	font-weight: 700;
+	background: #7f8c8d;
+	color: white;
 	font-size: 0.9em;
 	padding: 3px 15px;
 }
